# 2022_DCPT_LET

./: .gitignore  CITATION.cff  README.md  fix_depth_axis.py  pyproject.toml  requirements.txt
.github/workflows/: pages-gallery.yml  validate-manifests.yml
TOPAS/: main.txt  main_100GySOBP.txt  main_160MeV_1MU.txt  main_2GySOBP.txt
TOPAS/Beam/: sopb_1.txt
TOPAS/Geometry/: setup.txt
TOPAS/Materials/: pmma.txt  solid_water.txt
data/: README.md  output_catalog.json  result_notes.json
data/fluka/: README.md
data/fluka.cern/: code.yaml  generate_version.py
data/mcnp/: README.md  code.yaml
data/openshieldhit/: README.md  code.yaml  postprocess.sh  postprocess_local.sh  run_local.sh  run_openshieldhit.sh
data/phits/: README.md
data/sh12a/: README.md  code.yaml  fix_run.sh  postprocess.ps1  (+8 more)
docs/: contributing.md  coordinates.md  detector_reference.md  geometry.md  mc_available_scorers.md  phantom.md  plans.md  scoring.md
notebooks/: geometry_plots.py  sh_plots.py  summary.ipynb  topas_analysis.py  topas_plan1a.py  topas_plan1b.py  topas_plan1c.py  topas_plan2.py  xy-plot.py
src/: README.md  copy_sobp_sh12a.sh  fetch_results_from_zenodo.py  make_sobp.sh  mkplandirs.sh  paths.py  plan_manifest.txt
tools/: README.md  bootstrap_manifests.py  build_pages_site.py  generate_comparison_plots.py  generate_pdf_report.py  make_mcpl.sh  make_plandirs.sh  make_spotlists.sh  make_topas.sh  manifest.schema.json  patch_topas_testmode.py  plan_manifest.txt  plot_sh12a_vs_osh.py  rename_catalog_keys.py  render_diff_results.py  topas_set_nstat.py  validate_manifests.py
(+1651 files in other folders)
