[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "2022-dcpt-let"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "pymchelper>=2.9.2",
    "mcpl",
    "jsonschema>=4.0",
    "plotly>=5.0",
    "pyyaml",
    "pypdf>=4.0",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.format]
preview = true
