[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "2022-dcpt-let"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "pymchelper>=2.9.4",
    "mcpl",
    "jsonschema>=4.26.0",
    "plotly>=5.0",
    "pyyaml",
    "pypdf>=6.14.2",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.format]
preview = true
